hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/nested_splicing.php.exp
File "nested_splicing.php", line 6, characters 16-19:
Splice syntax `${...}` cannot be nested. (Parsing[1002])
File "nested_splicing.php", line 6, characters 16-19:
This value cannot be inserted (spliced) into an expression tree (Typing[4110])
  File "nested_splicing.php", line 6, characters 16-19:
  Expected `Spliceable<_, _, _>` because this is being spliced into another Expression Tree
  File "nested_splicing.php", line 6, characters 18-18:
  But got `int`
  File "nested_splicing.php", line 6, characters 18-18:
  Hack values need to be converted (lifted) to compatible types before splicing. For more information see: https://docs.hhvm.com/hack/expression-trees/splicing
