hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/nested_splicing.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`${${4}}`;
}
